# bitguise

./: .gitignore  Cargo.toml  README.md
.github/workflows/: release.yml
docs/: bip38_decrypt_ec_key.mmd  bip38_decrypt_non_ec.mmd  bip38_encrypt_non_ec.mmd  bip38_generate_ec_factor.mmd  bip38_generate_ec_key.mmd  mnemonic_encrypt.mmd
src/: bip38.rs  lib.rs  main.rs  mnemonic.rs  transform.rs
src/bip38/: aes.rs  key.rs  mnemonic.rs  mod.rs
src/bip39/: bip39.rs  language.rs  mnemonic.rs  mod.rs
src/commands/: compress.rs  encrypt.rs  mod.rs  retrieve.rs  search.rs  transform.rs  translate.rs
src/encrypt/: bip38.rs  mnemonic.rs  mod.rs  path.rs  verify.rs
src/utils/: inquire.rs  mod.rs
tests/: language.rs  mnemonic.rs  search.rs  sha256.rs
tests/common/: mod.rs  permutation.rs
tests/search/: youth  youth.out  将进酒  将进酒.out  将进酒.out.1
