[package]
name = "disguise"
version = "0.1.0"
edition = "2024"

description = "Disguise mnemonics and wallets in a simple way."
authors = ["Artimonist <artimonist@gmail.com>"]
homepage = "https://artimonist.org/"
repository = "https://github.com/artimonist/disguise/"
license = "MIT"
keywords = ["bitcoin", "wallet", "mnemonic", "crypto", "btc", "art"]
categories = ["cryptography"]

[[bin]]
name = "disguise"

[dependencies]
clap = { version = "4.5.40", features = ["derive", "env"] }
inquire = "0.7.5"
thiserror = "2.0.12"
anyhow = "1.0.98"
xbits = "0.8.0"
sha2 = "0.10.9"
# aes-gcm = "0.10.3"
# rand = "0.9.2"
# getrandom = "0.3.3"
hex = "0.4.3"
aes = "0.8.4"

[dev-dependencies]
assert_cmd = "2.0.17"
bitcoin = "0.32.6"
hex = "0.4.3"
itertools = "0.14.0"

[target.wasm32-unknown-unknown]
rustflags = ['--cfg', 'getrandom_backend="wasm_js"']
