[package]
name = "disguise"
version = "0.2.2"
edition = "2024"

description = "Disguise mnemonics and wallets in a simple way."
authors = ["Artimonist <artimonist@gmail.com>"]
homepage = "https://artimonist.org/"
repository = "https://github.com/artimonist/disguise/"
license = "MIT"
keywords = ["bitcoin", "wallet", "mnemonic", "crypto", "btc", "art"]
categories = ["cryptography"]

[[bin]]
name = "disguise"

[dependencies]
clap = { version = "4.5", features = ["derive", "env"] }
inquire = "0.7"
thiserror = "2"
anyhow = "1"
xbits = "0.8"
bitcoin = "0.32"
unicode-normalization = "0.1"
aes = "0.8"
sha2 = "0.10"
scrypt = "0.11"
pbkdf2 = "0.12"
argon2 = "0.5"
rand = "0.8"

[dev-dependencies]
assert_cmd = "2"
hex = "0.4"
itertools = "0.14"
